# EMAR-Mechatronics

./: CMakeLists.txt  README.md  package.xml
backend_com/: CMakeLists.txt  package.xml
backend_com/src/: .serv_listen.py.swp  serv_listen.py  serv_pub.py
emar_msg/: CMakeLists.txt  package.xml
haptics/: CMakeLists.txt  package.xml
haptics/src/: haptic-pub.py
launch/launch/: backend_com.launch
led/: CMakeLists.txt  package.xml
led/scripts/: LedColorSet.py  LedController.py
msg/: CMakeLists.txt  WoZCommand.msg  hapticMsg.msg  package.xml
neck/: CMakeLists.txt  package.xml
neck/src/: neck_controller.py
