<?xml version="1.0"?>
<package format="2">
  <name>emar_mechatronics</name>
  <version>0.0.0</version>
  <description>The emar_Mechatronics package</description>
  <author>Nick Armstrong</author>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="nma23@uw.edu">Nick Armstrong</maintainer>
  <maintainer email="baviermatthew@gmail.com">Matt</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>
  <!-- For Message Generation-->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>msg</build_depend>
  <exec_depend>msg</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
